@@ -1,3 +1,12 @@
+TAG: derivationload-6-0-18-1
+DATE: 04/16/2022
+STAFF: sc
+CHANGES:
+1) convert to postgres and python 3
+   this is adhoc load that would only be converted
+   when needed. We needed to create derivations
+   for the curatoralleleload bulk allele load for CREAM project
+
 TAG: derivationload-6-0-4-1
 DATE: 06/16/2016
 STAFF: lec 
